# test-binlog-rs

./: Cargo.toml
src/: main.rs
